2007-06-11  Vitaly Alexeev <tishka92@yahoo.com>

	SDL mutex & thread are removed from core of gameswf
	* base/tu_config.h: added #define TU_CONFIG_LINK_TO_THREAD
	* gameswf/gameswf_freetype.h: cleanup
	* gameswf/gameswf_mutex.cpp: removed
	* gameswf/gameswf_mutex.h: rewritten
	* gameswf/gameswf_movie_def.cpp,
	* gameswf/gameswf_as_classes/as_netstream.cpp,
	* gameswf/gameswf_as_classes/as_netstream.h,
	* gameswf/gameswf_root.cpp,
	* gameswf/gameswf_root.h,
	* gameswf/gameswf_sound_handler_sdl.cpp,
	* gameswf/gameswf_sound_handler_sdl.h: tu_mutex is used
	* gameswf/win32/VC8/gameswf.vcproj: gameswf_mutex.cpp is removed

2007-06-09  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_classes/as_netstream.*,
	* gameswf/gameswf_movie_def.cpp,
	* gameswf/gameswf_mutex.h:
	* gameswf/gameswf_root.cpp:
	cleanup

2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.*, 
	* gameswf/gameswf_freetype.cpp:
	The basic work with dynamic fonts is completed

2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.cpp: 
	* gameswf/gameswf_freetype.*: added handler of bold & italic styles (dynamic fonts)
	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: fixed compiler warning

2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_text.*,
	* gameswf/gameswf_freetype.*:
	Work with dynamic fonts
	
2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_font.cpp,
	* gameswf/gameswf_freetype.*: added BearingX & BearingY
	
2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_freetype.cpp: added get_fontfile(...) function,
	this function gets font file name by font name (for Win32 only)

2007-06-02  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: applied patch from Francois Guibert,
	fixed bug about the "Var" thing of text fields.

2007-05-29  Vitaly Alexeev <tishka92@yahoo.com>

	fixed bug #1727294 